WIP moving traffic model code into Tor

--- a/src/or/Makefile.nmake
+++ b/src/or/Makefile.nmake
@@ -67,6 +67,7 @@ LIBTOR_OBJECTS = \
   scheduler.obj \
   statefile.obj \
   status.obj \
+  tmodel.obj \
   transports.obj
 
 libtor.lib: $(LIBTOR_OBJECTS)
